# repro-cpython-140739

./: charm.py  charmcraft.yaml  leader.txt  neighbours.txt  pyproject.toml  readme.md  test.py
test/: test_unit.py
